# apps/webapi/docs/swagger.json
@@ -32,6 +32,23 @@
                 }
             }
         },
+        "/feedback/import": {
+            "post": {
+                "description": "Imports feedback from an uploaded CSV file.",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "feedback"
+                ],
+                "summary": "Imports feedback from an uploaded CSV file.",
+                "responses": {
+                    "204": {
+                        "description": "ok"
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Ensure that the service can be reached.",
